--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   <link rel="stylesheet" href="style.css">
-   </head>
-   <body>
-   hello world
-
-
-   </body>
+<head>
+<title>Hi there!</title>
+<link rel="stylesheet" href="style.css" type="text/css">
+</head>
+<script>
+	function show()
+	{
+	    var con = document.getElementById("g1");
+		if(con.style.display=="none")
+		    {
+			    con.style.display = "block";
+			}
+    }   
+</script>
+<body>
+    <nav id="mok1">
+			<ul>
+				<p>Using programs</p>
+				<li>c/c++</li>
+				<li>Java</li>
+				<li>HTML/CSS/Javascript</li>
+				<li>Linux</li>
+				<br>
+			</ul>
+			<ul>
+				<br>
+				<a href="#g1" onclick="show();">Favorite games</a>
+			    <li>Call of duty : modern warfare</li>
+				<li>league of legend</li>
+				<li>other steam games</li>
+				<br>
+			</ul>
+			<ul>
+			    <br>
+			    <li>Upload Channel</li>
+				<a href="https://www.youtube.com/channel/UCRmaORSRM-vZDnXWLgnX3FQ"
+				target="_blank"><img src="images/yt.png"/></a>
+			</ul>
+    </nav>
+  
+	<section class="contents">
+	    <div id=logo>
+		    <img src="images/키위새.jpg">
+        </div>
+	
+	</section>
+	
+</body>
+<footer>
+    <div style="display:none;" class="gl" id="g1">
+	<div class="clear"></div>
+	<a name="g1"></a>
+        <div id="cal">
+		    <img src="images/cal.jpg" width="240"></img>
+		    <h3>Golden Kiwi#5017633</h3>
+    	</div>
+	    <div id="lea">
+		    <img src="images/lea.jpg" width="240"></img>
+		    <h3>웰시코기꿍디팡팡</h3>		   
+	    </div>
+    	<div id="dis">
+		    <img src="images/dis.png" width="240"></img>
+		    <h3>Golden Kiwi#3579</h3>
+	    </div>
+	    <div id="ste">
+		    <img src="images/ste.png" width="240"></img>
+		    <br><br><br><h3>황금키위새/112701621</h3>
+	    </div>
+	</div>
+</footer>
 </html>
+
 
